kubernetes/apps/gotify/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: gotify
  labels:
    app.kubernetes.io/name: gotify
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: gotify
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gotify
    spec:
      containers:
        - name: gotify
          image: gotify/server:2.6.1
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gotify-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: gotify
spec:
  selector:
    app.kubernetes.io/name: gotify
  ports:
    - name: http
      port: 80
      targetPort: http
