kubernetes/apps/gotify/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gotify
  namespace: gotify
spec:
  parentRefs:
    - name: tailscale-gateway
      namespace: tailscale
  hostnames:
    - "gotify.local.fordkuppp.me"
  rules:
    - backendRefs:
        - name: gotify
          port: 80
